--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,21 +15,44 @@ body {
   width: 100%;
   padding: 0.5rem;
   font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  resize: vertical;
+  overflow: hidden;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+}
+
+.prompt-view {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: .75rem;
+  justify-content: center;
+  border: solid darkgray 1px;
+  gap: 1rem;
+  border-radius: .5rem;
+
+  @media only screen and (max-width: 480px) {
+    flex-direction: column;
+    padding: 1rem;
+  }
 }
 
 .submit-button {
   display: inline-block;
-  margin: 1rem 0;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   font-size: 1rem;
   color: white;
-  background-color: #0070f3;
+  background-color: black;
   border: none;
-  border-radius: 4px;
+  height: 48px;
+  border-radius: .5rem;
   cursor: pointer;
   transition: background-color 0.3s;
+
+  @media only screen and (max-width: 480px) {
+    width: 100%;
+  }
 }
 
 .submit-button:hover {
