--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,17 +24,17 @@ body {
 
 .prompt-view {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  padding: 1rem;
   align-items: center;
-  padding: .75rem;
   justify-content: center;
   border: solid darkgray 1px;
   gap: 1rem;
   border-radius: .5rem;
 
-  @media only screen and (max-width: 480px) {
-    flex-direction: column;
-    padding: 1rem;
+  @media only screen and (min-width: 480px) {
+    flex-direction: row;
+    padding: .75rem;
   }
 }
 
@@ -43,7 +43,7 @@ body {
   padding: 0.5rem 2rem;
   font-size: 1rem;
   color: white;
-  background-color: black;
+  background-color: #252525;
   border: none;
   height: 48px;
   border-radius: .5rem;
@@ -79,4 +79,89 @@ body {
   /* Custom styles for the selected option */
   background-color: #0070f3;
   color: #fff;
+}
+
+/* Base styles for the grid */
+.grid-container {
+  display: grid;
+  gap: 16px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+      "item1 item2"
+      "item3 item4";
+}
+
+.last-item {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.large-item {
+  grid-column: auto;
+  grid-row: auto;
+}
+
+/* Default grid items */
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  white-space: normal;
+  background-color: #252525;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+  color: white;
+  box-sizing: border-box;
+  border-radius: .5rem;
+  overflow: hidden;
+}
+
+.camera-settings-value {
+  font-weight: 500;
+  height: 100%;
+  padding: 0 12px;
+  margin-bottom: 12px;
+  align-content: center;
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+.camera-settings-name {
+  font-weight: 300;
+  align-content: center;
+  font-size: 1rem;
+  background-color: #2f2f2f;
+  margin: 8px;
+  min-height: 36px;
+  padding: 12px;
+  border-radius: 4px;
+  white-space: normal;
+  overflow: hidden;
+  word-wrap: break-word;
+}
+
+@media only screen and (min-width: 720px) {
+  .grid-container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+
+  .last-item {
+    grid-column: auto;
+    grid-row: auto;
+  }
+
+  .full-width {
+    grid-column: span 2;
+    grid-row: auto;
+  }
+
+  .large-item {
+    grid-column: span 2;
+    grid-row: span 2;
+
+    .camera-settings-value {
+      font-size: 3rem;
+    }
+  }
 }
