--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,8 @@ body {
   box-sizing: border-box;
 }
 
-.container {
-  max-width: 800px;
+.main-container {
   margin: 0 auto;
-  padding: 2rem;
 }
 
 .text-input {
@@ -61,7 +59,17 @@ body {
 
 .response-display {
   margin-top: 1rem;
-  padding: 0.5rem;
+  padding: 1.5rem;
+}
+
+.pre-text {
+  color: grey;
+  visibility: hidden;
+}
+
+.title {
+  font-weight: 700;
+  visibility: hidden;
 }
 
 /* Style the dropdown select options */
@@ -146,6 +154,16 @@ body {
     grid-template-rows: repeat(4, 1fr);
   }
 
+  .pre-text {
+    visibility: visible;
+  }
+
+  .title {
+    visibility: visible;
+    margin: 0 0 96px 0;
+    font-size: 4rem;
+  }
+
   .last-item {
     grid-column: auto;
     grid-row: auto;
@@ -163,5 +181,199 @@ body {
     .camera-settings-value {
       font-size: 3rem;
     }
+  }
+}
+
+/*sidebar*/
+.container {
+  display: flex;
+  height: 100vh;
+  flex-direction: row;
+  width: 100vw;
+  overflow: hidden;
+  transition: all 0.5s ease;
+}
+
+.sidebar {
+  width: 360px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  box-shadow: 5px 5px 15px rgba(4, 4, 4, 0.3);
+  padding: 42px;
+  gap: 24px;
+  position: relative;
+  transition: transform 0.5s ease;
+  z-index: 5;
+}
+
+.sidebar h1 {
+  font-weight: 700;
+  font-size: 3em;
+  color: #2f2f2f;
+  margin: 0 0 12px 0;
+  transition: color 0.5s ease;
+}
+
+.sidebar.slide-in {
+  transform: translateX(0);
+}
+
+.sidebar.slide-out {
+  transform: translateX(-100%);
+  box-shadow: none;
+}
+
+.search-btn {
+  background-color: #555;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.nav-header {
+  position: absolute;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  z-index: 6;
+  /*opacity: 0;*/
+  width: 100%;
+  /*background-color: white;*/
+  padding-top: 90px;
+  padding-bottom: 45px;
+  padding-left: 178px;
+}
+
+.mobile-title {
+  display: none;
+}
+
+.back-btn {
+  display: flex;
+  color: white;
+  border: none;
+  height: 48px;
+  width: 48px;
+  box-shadow: 0px 0px 12px rgba(2, 2, 2, 0.2);
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.back-btn img {
+  align-self: center;
+}
+
+.nav-header.slide-in {
+  transform: translate(0, 0);
+  opacity: 1;
+}
+
+.nav-header.slide-out {
+  transform: translate(-200px, 0);
+  opacity: 0;
+}
+
+.main-content {
+  flex: 1;
+  margin-left: -360px;
+  overflow: scroll;
+  transition: transform 0.5s ease;
+  padding: 156px 152px 80px 72px;
+}
+
+.main-content.expand-slide {
+  transform: translateX(0);
+  width: 100vw;
+  height: auto;
+}
+
+.main-content.collapse-slide {
+  transform: translateX(360px);
+  width: calc(100% - 360px);
+  height: 100%;
+}
+
+@media only screen and (max-width: 900px) {
+  .main-content {
+    padding: 156px 80px 80px 4px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    padding: 24px 0;
+    align-items: center;
+    box-shadow: 0px 2px 15px rgba(125, 125, 125, 0.1);
+  }
+
+  .sidebar h1 {
+    color: coral;
+  }
+
+  .sidebar.slide-in {
+    transform: translateY(0);
+  }
+
+  .sidebar.slide-out {
+    transform: translateY(-90%);
+    box-shadow: 0px 5px 25px rgba(150, 150, 150, 0.2);
+  }
+
+  .nav-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 12px;
+    top: 16px;
+    left: 24px;
+    padding: 0;
+  }
+
+  .back-btn {
+    background-color: transparent;
+    height: 36px;
+    width: 36px;
+    box-shadow: none;
+  }
+
+  .mobile-title {
+    display: flex;
+    font-size: 1.2rem;
+    width: auto;
+    font-weight: 700;
+  }
+
+  .main-content {
+    margin: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .main-content.expand-slide {
+    transform: translateY(0);
+    margin-top: -110vh;
+    width: 100%;
+    height: 100vh;
+    /*padding-top: 12px;*/
+    padding-bottom: 12px;
+  }
+
+  .main-content.collapse-slide {
+    transform: translateY(100%);
+    width: 100vw;
+    height: 100%;
   }
 }
