--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,12 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .main-container {
-  margin: 0 auto;
+  margin: 0;
+  overflow: hidden;
 }
 
 .text-input {
@@ -72,6 +74,13 @@ body {
   visibility: hidden;
 }
 
+.description {
+  font-style: italic;
+  margin-bottom: 80px;
+  padding: 0 48px;
+  color: #555555;
+}
+
 /* Style the dropdown select options */
 .select-dropdown option {
   /* Custom styles */
@@ -117,10 +126,11 @@ body {
   text-align: center;
   white-space: normal;
   background-color: #252525;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+  /*box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);*/
   color: white;
+  min-height: 180px;
   box-sizing: border-box;
-  border-radius: .5rem;
+  border-radius: 16px;
   overflow: hidden;
 }
 
@@ -160,7 +170,7 @@ body {
 
   .title {
     visibility: visible;
-    margin: 0 0 96px 0;
+    margin: 40px 0 96px 0;
     font-size: 4rem;
   }
 
@@ -238,18 +248,36 @@ body {
 
 .nav-header {
   position: absolute;
-  transition: transform 0.5s ease, opacity 0.5s ease;
+  transition: transform 0.5s ease, background-color 0.5s ease, padding-bottom 0.5s ease, padding-top 0.5s ease;
   z-index: 6;
-  /*opacity: 0;*/
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   width: 100%;
-  /*background-color: white;*/
+  background-color: transparent;
+  gap: 24px;
   padding-top: 90px;
   padding-bottom: 45px;
   padding-left: 178px;
 }
 
+.nav-header.intersecting {
+  background-color: white;
+  padding-top: 18px;
+  padding-bottom: 8px;
+  box-shadow: 0 5px 15px rgba(150, 150, 150, 0.1);
+}
+
 .mobile-title {
-  display: none;
+  opacity: 0;
+}
+
+.mobile-title.intersecting {
+  display: flex;
+  opacity: 1;
+  font-weight: 500;
+  transition: opacity 0.2s ease;
+  font-size: 1.5rem;
 }
 
 .back-btn {
@@ -284,7 +312,7 @@ body {
   margin-left: -360px;
   overflow: scroll;
   transition: transform 0.5s ease;
-  padding: 156px 152px 80px 72px;
+  padding: 156px 152px 80px 70px;
 }
 
 .main-content.expand-slide {
@@ -302,6 +330,16 @@ body {
 @media only screen and (max-width: 900px) {
   .main-content {
     padding: 156px 80px 80px 4px;
+  }
+
+  .nav-header {
+    padding-left: 112px;
+  }
+
+  .additional-info {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
   }
 }
 
@@ -333,13 +371,17 @@ body {
   }
 
   .nav-header {
-    display: flex;
-    flex-direction: row;
     align-items: center;
     gap: 12px;
-    top: 16px;
+    top: 12px;
     left: 24px;
     padding: 0;
+  }
+
+  .nav-header.intersecting {
+    background-color: transparent;
+    padding: 0;
+    box-shadow: none;
   }
 
   .back-btn {
@@ -353,7 +395,13 @@ body {
     display: flex;
     font-size: 1.2rem;
     width: auto;
-    font-weight: 700;
+    opacity: 1;
+    font-weight: 500;
+  }
+
+  .mobile-title.intersecting {
+    display: flex;
+    font-size: 1.2rem;
   }
 
   .main-content {
@@ -376,4 +424,21 @@ body {
     width: 100vw;
     height: 100%;
   }
+}
+
+.additional-info {
+  display: flex;
+  gap: 16px;
+  margin-top: 100px;
+}
+
+.additional-info div {
+  flex: 0.5;
+  gap: 20px;
+}
+
+.additional-info div p {
+  color: #777;
+  font-weight: 500;
+  line-height: 1.5rem;
 }
